--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,15 @@ name: Build + Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+    tags:
+      - "v*.*.*"
+    paths-ignore:
+      - '**.md'
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
 
 env:
   CARGO_TERM_COLOR: always
