Add necessary components

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
         profile: minimal
         toolchain: nightly
         override: true
+        components: rust-src rustc-dev llvm-tools-preview
     - name: Build
       run: cargo build --verbose
     - name: Run tests
