Install components via rustup

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,8 @@ jobs:
         profile: minimal
         toolchain: nightly
         override: true
-        components: rust-src rustc-dev llvm-tools-preview
+    - name: Install Rust components
+      run: rustup component add rustc-dev llvm-tools-preview
     - name: Build
       run: cargo build --verbose
     - name: Run tests
