--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,13 +2,13 @@ name: Build + Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
     tags:
       - "v*.*.*"
     paths-ignore:
       - '**.md'
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
     paths-ignore:
       - '**.md'
 
