--- a/test-data/unit/Cargo.toml
+++ b/test-data/unit/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "test-data"
+name = "unit"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "test_data"
+name = "unit"
 
-[dependencies]
