--- a/rustyrts-dynamic-runner/Cargo.toml
+++ b/rustyrts-dynamic-runner/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["staticlib"]
 nix = "0.26.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+threadpool = "1.8.1"
