--- a/rustyrts-dynamic-runner/Cargo.toml
+++ b/rustyrts-dynamic-runner/Cargo.toml
@@ -13,3 +13,4 @@ nix = "0.26.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 threadpool = "1.8.1"
+ipc-channel = "0.16.0"
