--- a/rustyrts-dynamic-runner/Cargo.toml
+++ b/rustyrts-dynamic-runner/Cargo.toml
@@ -9,8 +9,8 @@ crate-type = ["staticlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = "0.26.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 threadpool = "1.8.1"
-ipc-channel = "0.16.0"
+fork = "0.1.20"
+libc = "0.2.139"
