--- a/rustyrts-dynamic-runner/Cargo.toml
+++ b/rustyrts-dynamic-runner/Cargo.toml
@@ -8,9 +8,11 @@ crate-type = ["staticlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+[target.'cfg(unix)'.dependencies]
 threadpool = "1.8.1"
 fork = "0.1.20"
 libc = "0.2.139"
+
+[dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
