--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ name = "rustyrts-static"
 [[bin]]
 name = "rustyrts-dynamic"
 
+[features]
+ctfe = []
+
 [dependencies]
 log = "0.4"
 serde_json = "1.0.61"
