--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,7 @@ regex = "1.7.1"
 lazy_static = "1.4.0"
 once_cell = "1.17.1"
 threadpool = "1.8.1"
+
+[dev-dependencies]
+tempdir = "0.3.7"
+test-case = "3.1.0"
