Enable rustyrts to trace itself

--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -31,6 +31,7 @@ jobs:
       run: rustup component add rustc-dev llvm-tools-preview
     - name: Check Rust version
       run: cargo --version && rustc --version
+    - uses: Swatinem/rust-chachev2      
     - name: Build
       run: cargo build --verbose
     - name: Run tests
