--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "cargo-mutants"
 version = "23.12.2"
+name = "cargo-mutants-rts"
 edition = "2021"
 authors = ["Martin Pool"]
 license = "MIT"
