--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ name = "rustyrts-eval"
 version = "0.1"
 description = "Infrastructure for evaluating rustyrts"
 dependencies = [
+    'setuptools~=65.6.3',
+    'wheel',
     'seaborn~=0.12.2',
     'matplotlib~=3.7.1',
     'pandas~=1.5.3',
-    'setuptools~=65.6.3',
     'click==7.*,>=7.1.2',
     'gitpython==3.*,>=3.1.3',
     'halo==0.*,>=0.0.29',
@@ -21,7 +22,7 @@ dependencies = [
 ]
 
 [tool.setuptools]
-packages=[
+packages = [
     'rustyrts_eval',
     'rustyrts_eval.cli',
     'rustyrts_eval.cli.db',
