--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     'halo==0.*,>=0.0.29',
     'sqlalchemy==1.*,>=1.3.17',
     'psycopg2-binary==2.*,>=2.8.6',
-    'sqlalchemy-utils>=0.41.1',
+    'sqlalchemy-utils@git+https://github.com/kvesteri/sqlalchemy-utils.git@00d800063d2f8d2dcee714a3314311d79f8d4040',
     'sqlalchemy-views>=0.3.2'
 ]
 
