Fixed some graph discontinuities in the context of statics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ rustc_private=true
 [profile.release]
 debug = true
 
+[features]
+default = []
+print_paths = []
+
+
 [[bin]]
 name = "cargo-rustyrts"
 
