--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ ignore = "0.4.20"
 indoc = "2.0.0"
 itertools = "0.11"
 mutants = "0.0.3"
-nix = "0.27"
+nix = { version="0.27", features = ["signal"]}
 patch = "0.7"
 path-slash = "0.2"
 quote = "1.0"
