Improved handling of doctests and integration with cargoo

--- a/rustyrts-dynamic-rlib/Cargo.toml
+++ b/rustyrts-dynamic-rlib/Cargo.toml
@@ -3,6 +3,9 @@ name = "rustyrts-dynamic-rlib"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["fs_lock_syscall"]
+fs_lock_syscall = []
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
