--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ rustc_private=true
 debug = true
 
 [features]
-default = []
-
+default = ["fs_lock_file_guard"]
+fs_lock_file_guard = []
 
 [[bin]]
 name = "cargo-rustyrts"
@@ -25,28 +25,33 @@ name = "rustyrts-static-doctest"
 [[bin]]
 name = "rustyrts-dynamic"
 
+[[bin]]
+name = "rustyrts-dynamic-doctest"
+
+
 [dependencies]
+
+# imitating cargo test command
 cargo = "0.77.0"
 cargo-util = "0.2.11"
 git2 = "0.18.3"
 git2-curl = "0.19.0"
-
 anyhow = "1.0.83"
-
 clap = "4.5.4"
 
+# logging
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
 humantime = "2.1.0"
 
-pulldown-cmark = "0.10.3"
+# utilities used in selecting tests
 internment = {version = "0.8.3", features = ["arena"]}
-
 queues = "1.0.2"
 itertools = "0.10.5"
 regex = "1.7.1"
 lazy_static = "1.4.0"
 once_cell = "1.17.1"
+file-guard = "0.2.0"
 
 [dev-dependencies]
 tempdir = "0.3.7"
