--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ keywords = ["static analysis", "dynamic analysis", "regression test selection"]
 categories = ["command-line-utilities", "development-tools::cargo-plugins"]
 
 [package.metadata.rust-analyzer]
-rustc_private=true
+rustc_private = true
 
 [profile.release]
 debug = true
-opt-level = 'z'     # Optimize for size
+opt-level = 'z' # Optimize for size
 
 [features]
 default = ["fs_lock_file_guard"]
@@ -34,9 +34,7 @@ name = "rustyrts-dynamic"
 [[bin]]
 name = "rustyrts-dynamic-doctest"
 
-
 [dependencies]
-
 # imitating cargo test command
 cargo = "0.77.0"
 cargo-util = "0.2.11"
@@ -51,13 +49,16 @@ tracing = "0.1.40"
 humantime = "2.1.0"
 
 # utilities used in selecting tests
-internment = {version = "0.8.3", features = ["arena"]}
+internment = { version = "0.8.3", features = ["arena"] }
 queues = "1.0.2"
 itertools = "0.10.5"
 regex = "1.7.1"
 lazy_static = "1.4.0"
 once_cell = "1.17.1"
 file-guard = "0.2.0"
+
+num_enum = "0.7.2"
+dot = "0.1.4"
 
 [dev-dependencies]
 tempdir = "0.3.7"
