--- a/.gitmodules
+++ b/.gitmodules
@@ -66,7 +66,10 @@
 	url = https://github.com/penumbra-zone/penumbra
 [submodule "projects/small/budget"]
 	path = projects/small/budget
-	url = git@github.com:shterrett/budget.git
+	url = https://github.com/shterrett/budget
 [submodule "projects/mutants/rbatis"]
 	path = projects/mutants/rbatis
 	url = https://github.com/rbatis/rbatis.git
+[submodule "projects/small/anyhow"]
+	path = projects/small/anyhow
+	url = https://github.com/dtolnay/anyhow.git
