--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,11 +37,12 @@ name = "rustyrts-dynamic-doctest"
 
 [dependencies]
 # imitating cargo test command
-cargo = "0.77.0"
+cargo = "0.78.0"
 cargo-util = "0.2.11"
 git2 = "0.18.3"
 git2-curl = "0.19.0"
 anyhow = "1.0.83"
+anstyle = "1.0.4"
 clap = "4.5.4"
 
 # logging
